force-app/main/default/objects/Case/fields/Accrual_Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Accrual_Issue_Type__c</fullName>
    <label>Accrual Issue Type</label>
    <picklist>
        <picklistValues>
            <fullName>Vacation</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Sick</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Vacation &amp; Sick</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>