force-app/main/default/objects/Case/fields/Accused_NonEmployee__c.field-meta.xml
<CustomField>
    <fullName>Accused_NonEmployee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accused NonEmployee</label>
    <referenceTo>NonEmployee__c</referenceTo>
    <relationshipLabel>Cases (Accused NonEmployee)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>