force-app/main/default/objects/Case/fields/ACHN_Clinics__c.field-meta.xml
<CustomField>
    <fullName>ACHN_Clinics__c</fullName>
    <description>Compliance Historical data</description>
    <label>ACHN Clinics</label>
    <length>100</length>
    <type>Text</type>
</CustomField>