force-app/main/default/objects/Case/fields/Action_Taken_Other__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken_Other__c</fullName>
    <description>Compliance historical data</description>
    <label>Action Taken Other</label>
    <type>TextArea</type>
</CustomField>