force-app/main/default/objects/Case/fields/Actions_Taken__c.field-meta.xml
<CustomField>
    <fullName>Actions_Taken__c</fullName>
    <description>Compliance Historical data</description>
    <label>Actions Taken</label>
    <length>250</length>
    <type>Text</type>
</CustomField>