force-app/main/default/objects/Case/fields/Actions_Taken_in_Response_to_Breach__c.field-meta.xml
<CustomField>
    <fullName>Actions_Taken_in_Response_to_Breach__c</fullName>
    <description>Compliance</description>
    <label>Actions Taken in Response to Breach</label>
    <type>TextArea</type>
</CustomField>