force-app/main/default/objects/Case/fields/Actual_Date_Error_Began__c.field-meta.xml
<CustomField>
    <fullName>Actual_Date_Error_Began__c</fullName>
    <label>Actual Date Error Began</label>
    <type>Date</type>
</CustomField>