force-app/main/default/objects/Case/fields/Actual_Date_Error_Ended__c.field-meta.xml
<CustomField>
    <fullName>Actual_Date_Error_Ended__c</fullName>
    <label>Actual Date Error Ended</label>
    <type>Date</type>
</CustomField>