force-app/main/default/objects/Case/fields/Actual_Date_of_Closure__c.field-meta.xml
<CustomField>
    <fullName>Actual_Date_of_Closure__c</fullName>
    <description>Date EEO Team Closed the Case</description>
    <label>Actual Date of Closure</label>
    <type>DateTime</type>
</CustomField>