force-app/main/default/objects/Case/fields/Age_Bracket__c.field-meta.xml
<CustomField>
    <fullName>Age_Bracket__c</fullName>
    <formula>IF(
NOW() - CreatedDate &lt;= 2,
&quot;0-30 Days&quot;,
IF(
NOW() - CreatedDate &lt; 4,
&quot;31-60 Days&quot;,
IF(
NOW() - CreatedDate &lt; 6,
&quot;61-90 Days&quot;,
IF(
NOW() - CreatedDate &lt; 8,
&quot;91-120 Days&quot;,
IF(
NOW() - CreatedDate &gt; 10,
&quot;120+ Days&quot;,
&quot;N/A&quot;
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age Bracket</label>
    <type>Text</type>
</CustomField>