force-app/main/default/objects/Case/fields/Age_Range__c.field-meta.xml
<CustomField>
    <fullName>Age_Range__c</fullName>
    <formula>IF( Age__c &gt; 180, &quot;6. 180+ Days&quot;,
IF( Age__c &gt;= 61, &quot;5. 61-179 Days&quot;,
IF( Age__c &gt;= 31, &quot;4. 31-60 Days&quot;,
IF( Age__c &gt;= 15, &quot;3. 15-30 Days&quot;,
IF( Age__c &gt;= 8, &quot;2. 8-14 Days&quot;, 
&quot;1. 0-7 Days&quot; )))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age (Range)</label>
    <type>Text</type>
</CustomField>