force-app/main/default/objects/Case/fields/Alleged_Violation_Details__c.field-meta.xml
<CustomField>
    <fullName>Alleged_Violation_Details__c</fullName>
    <label>Alleged Violation Details</label>
    <type>TextArea</type>
</CustomField>