force-app/main/default/objects/Case/fields/Article__c.field-meta.xml
<CustomField>
    <fullName>Article__c</fullName>
    <description>List the Article</description>
    <label>Article</label>
    <length>6</length>
    <type>Text</type>
</CustomField>