force-app/main/default/objects/Case/fields/Attention_to_City__c.field-meta.xml
<CustomField>
    <fullName>Attention_to_City__c</fullName>
    <label>Attention to City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>