force-app/main/default/objects/Case/fields/Attention_to_Email__c.field-meta.xml
<CustomField>
    <fullName>Attention_to_Email__c</fullName>
    <label>Attention to Email</label>
    <type>Email</type>
</CustomField>