force-app/main/default/objects/Case/fields/Attention_to_Fax__c.field-meta.xml
<CustomField>
    <fullName>Attention_to_Fax__c</fullName>
    <label>Attention to Fax</label>
    <type>Phone</type>
</CustomField>