force-app/main/default/objects/Case/fields/Attention_to_Phone__c.field-meta.xml
<CustomField>
    <fullName>Attention_to_Phone__c</fullName>
    <label>Attention to Phone</label>
    <type>Phone</type>
</CustomField>