force-app/main/default/objects/Case/fields/Attention_to_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Attention_to_Postal_Code__c</fullName>
    <label>Attention to Postal Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>