force-app/main/default/objects/Case/fields/Attention_to_State__c.field-meta.xml
<CustomField>
    <fullName>Attention_to_State__c</fullName>
    <label>Attention to State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>