force-app/main/default/objects/Case/fields/Attention_to_Street__c.field-meta.xml
<CustomField>
    <fullName>Attention_to_Street__c</fullName>
    <label>Attention to Street</label>
    <length>120</length>
    <type>Text</type>
</CustomField>