force-app/main/default/objects/Case/fields/AttentionName__c.field-meta.xml
<CustomField>
    <fullName>AttentionName__c</fullName>
    <label>Attention (Name)</label>
    <length>120</length>
    <type>Text</type>
</CustomField>