force-app/main/default/objects/Case/fields/Attestation_Signature__c.field-meta.xml
<CustomField>
    <fullName>Attestation_Signature__c</fullName>
    <label>Attestation Signature</label>
    <length>120</length>
    <type>Text</type>
</CustomField>