force-app/main/default/objects/Case/fields/BA_Information__c.field-meta.xml
<CustomField>
    <fullName>BA_Information__c</fullName>
    <description>Compliance Historical data</description>
    <label>BA Information</label>
    <type>TextArea</type>
</CustomField>