force-app/main/default/objects/Case/fields/Believed_Date_Error_Ended__c.field-meta.xml
<CustomField>
    <fullName>Believed_Date_Error_Ended__c</fullName>
    <label>Believed Date Error Ended</label>
    <type>Date</type>
</CustomField>