force-app/main/default/objects/Case/fields/BelievedDateErrorBegan__c.field-meta.xml
<CustomField>
    <fullName>BelievedDateErrorBegan__c</fullName>
    <label>Believed Date Error Began</label>
    <type>Date</type>
</CustomField>