force-app/main/default/objects/Case/fields/Benefits_Assistance_Source__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Assistance_Source__c</fullName>
    <label>Benefits / Assistance Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>