force-app/main/default/objects/Case/fields/BHRCaseNumber__c.field-meta.xml
<CustomField>
    <fullName>BHRCaseNumber__c</fullName>
    <label>BHR Case Number</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>