force-app/main/default/objects/Case/fields/Breach_Affecting__c.field-meta.xml
<CustomField>
    <fullName>Breach_Affecting__c</fullName>
    <description>Compliance Historical data</description>
    <label>Breach Affecting</label>
    <length>100</length>
    <type>Text</type>
</CustomField>