force-app/main/default/objects/Case/fields/Business_Associate_Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Business_Associate_Contact_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Complinace</description>
    <label>Contact Information</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>