force-app/main/default/objects/Case/fields/Business_Associate_Contact_Information_N__c.field-meta.xml
<CustomField>
    <fullName>Business_Associate_Contact_Information_N__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Compliance</description>
    <label>Contact Information N</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>