force-app/main/default/objects/Case/fields/Business_Unit_Description__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Description__c</fullName>
    <label>Business Unit Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>