force-app/main/default/objects/Case/fields/Business_Unit_ID__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_ID__c</fullName>
    <label>Business Unit ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>