force-app/main/default/objects/Case/fields/CAP_Description__c.field-meta.xml
<CustomField>
    <fullName>CAP_Description__c</fullName>
    <description>Compliance: Description fields specifically for the CAP section</description>
    <label>Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>