force-app/main/default/objects/Case/fields/Case_Received_by_EEO_Team__c.field-meta.xml
<CustomField>
    <fullName>Case_Received_by_EEO_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Date the Case is received by the EEO team.</description>
    <label>Case Received by EEO Team</label>
    <type>Checkbox</type>
</CustomField>