force-app/main/default/objects/Case/fields/CaseRejectedDescription__c.field-meta.xml
<CustomField>
    <fullName>CaseRejectedDescription__c</fullName>
    <label>Case Rejected Description</label>
    <type>TextArea</type>
</CustomField>