force-app/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Compliance case use only. Dependent Sub Category</description>
    <label>Category</label>
    <picklist>
        <picklistValues>
            <fullName>Accurate Books &amp; Records</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Conflict of Interest</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Contracts/Agreements (MOU, SOW, SCA, etc.)</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>False Claims</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Fraud, Waste, Abuse, and Financial Misconduct</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>HIPAA - Privacy, Confidentiality &amp; Security</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Human Resources</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Managed Care Plan Activity</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Other</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Quality/Patient Safety</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Regulatory/Policy</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Research</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Theft</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>CC-Project</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Grievances &amp; Appeals</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>