force-app/main/default/objects/Case/fields/CCH_Policies__c.field-meta.xml
<CustomField>
    <fullName>CCH_Policies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Requests &amp; Provider Alerts</label>
    <type>Checkbox</type>
</CustomField>