force-app/main/default/objects/Case/fields/CCH_Policies_Name__c.field-meta.xml
<CustomField>
    <fullName>CCH_Policies_Name__c</fullName>
    <description>Compliance: Field to be added to Policies section</description>
    <label>Agency</label>
    <length>150</length>
    <type>Text</type>
</CustomField>