force-app/main/default/objects/Case/fields/ChangeContactInfoInE1__c.field-meta.xml
<CustomField>
    <fullName>ChangeContactInfoInE1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Contact Info In EBS</label>
    <type>Checkbox</type>
</CustomField>