force-app/main/default/objects/Case/fields/Class_Certification_Seminar__c.field-meta.xml
<CustomField>
    <fullName>Class_Certification_Seminar__c</fullName>
    <label>Class, certification or seminar?</label>
    <picklist>
        <picklistValues>
            <fullName>Class</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Certification</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Seminar</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>