force-app/main/default/objects/Case/fields/Clinical__c.field-meta.xml
<CustomField>
    <fullName>Clinical__c</fullName>
    <description>Compliance: Sits inside of Type of PHI Involved in Breach</description>
    <inlineHelpText>Please select all that apply</inlineHelpText>
    <label>Clinical</label>
    <picklist>
        <picklistValues>
            <fullName>Diagnosis/Condition</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Lab Results</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Medications</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Other Treatment Information</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>MultiselectPicklist</type>
</CustomField>