force-app/main/default/objects/Case/fields/Clinical_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clinical</label>
    <type>Checkbox</type>
</CustomField>