force-app/main/default/objects/Case/fields/Collateral_Path__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Path__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Compliance, used to illustrate that there is a document associated with this contact.</description>
    <label>External Document(s)</label>
    <type>Checkbox</type>
</CustomField>