force-app/main/default/objects/Case/fields/Communication_Date__c.field-meta.xml
<CustomField>
    <fullName>Communication_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Compliance: backdate function</description>
    <label>Communication Date</label>
    <type>Date</type>
</CustomField>