force-app/main/default/objects/Case/fields/Communication_Type__c.field-meta.xml
<CustomField>
    <fullName>Communication_Type__c</fullName>
    <description>Compliance: Used for backdate</description>
    <label>Communication Type</label>
    <picklist>
        <picklistValues>
            <fullName>Email</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>In Person</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Telephone (received)</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>