force-app/main/default/objects/Case/fields/Compliance_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Case_Number__c</fullName>
    <description>For Compliance historical data.</description>
    <label>Compliance Case Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>