force-app/main/default/objects/Case/fields/Compliance_Department__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Department__c</fullName>
    <description>Compliance: list of all departments within CCH</description>
    <label>Department</label>
    <picklist>
        <controllingField>Compliance_Entity__c</controllingField>
        <picklistValues>
            <fullName>Admitting &amp; Registration</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Arlington Heights Health Center</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>ATN Study</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Austin Health Center</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Case Mgmt &amp; UM</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Central Scheduling</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Cermak</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Children&apos;s Advocacy Center</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Cicero Health Center</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Communications</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Compliance</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Cook County Jail</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Cottage Grove Health Center</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>CORE Center</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>CountyCare Administration</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Dental Clinic</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Emergency Department/Trauma</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Employee Health Services</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Englewood Health Center</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Environmental Services</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Fantus Clinic</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Finance</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Finance/Revenue Cycle</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Food Services</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>General Counsel</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Health Education</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Health Information Management</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Hospice</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Human Resources</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Imaging Services</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>