force-app/main/default/objects/Case/fields/Compliance_Description__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Description__c</fullName>
    <description>Compliance: Description used to so the field could be represented on the case list view (Remove this field if a way is found to add the default/standard field to the case list view)</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>