force-app/main/default/objects/Case/fields/Compliance_Entity__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Entity__c</fullName>
    <description>Compliance: list of all entities inside CCH</description>
    <label>Entity</label>
    <picklist>
        <controllingField>Compliance_Organization__c</controllingField>
        <picklistValues>
            <fullName>ACHN</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Care Management Entities (CMEs)</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Correctional Health</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>CountyCare Administration</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Dental</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Department of Public Health</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>John H. Stroger, Jr. Hospital</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Pharmacy Benefit Manager (PBM)</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Professional Building</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Provident</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>System Administration</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Third Party Administrator (TPA)</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Transportation</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Vision</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>