force-app/main/default/objects/Case/fields/Compliance_Organization__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Organization__c</fullName>
    <description>Compliance: Two separate orgs inside of CCH</description>
    <label>Organization</label>
    <picklist>
        <picklistValues>
            <fullName>Cook County Health</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>CountyCare</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>