force-app/main/default/objects/Case/fields/ComplianceClosedDate__c.field-meta.xml
<CustomField>
    <fullName>ComplianceClosedDate__c</fullName>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>