force-app/main/default/objects/Case/fields/Conference_Call_Date_of_Education__c.field-meta.xml
<CustomField>
    <fullName>Conference_Call_Date_of_Education__c</fullName>
    <label>Conference Call Date of Education</label>
    <type>Date</type>
</CustomField>