force-app/main/default/objects/Case/fields/Conference_Call_Number_of_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Conference_Call_Number_of_Sessions__c</fullName>
    <label>Conference Call Number of Sessions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>