force-app/main/default/objects/Case/fields/Conference_Call_Presenters__c.field-meta.xml
<CustomField>
    <fullName>Conference_Call_Presenters__c</fullName>
    <label>Conference Call Presenters</label>
    <type>TextArea</type>
</CustomField>