force-app/main/default/objects/Case/fields/Conference_Call_Selected2__c.field-meta.xml
<CustomField>
    <fullName>Conference_Call_Selected2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conference Call Selected2</label>
    <type>Checkbox</type>
</CustomField>