force-app/main/default/objects/Case/fields/Conference_Call_Selected__c.field-meta.xml
<CustomField>
    <fullName>Conference_Call_Selected__c</fullName>
    <formula>INCLUDES(Type_of_Education__c, &#39;Conference Call&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conference Call Selected</label>
    <type>Checkbox</type>
</CustomField>