force-app/main/default/objects/Case/fields/Conference_Call_Title__c.field-meta.xml
<CustomField>
    <fullName>Conference_Call_Title__c</fullName>
    <label>Conference Call Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>