force-app/main/default/objects/Case/fields/Contact_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Employee_ID__c</fullName>
    <formula>TEXT(Contact.TR_Employee_ID_Numeric__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Employee ID</label>
    <type>Text</type>
</CustomField>