force-app/main/default/objects/Case/fields/Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Contact_Information__c</fullName>
    <description>Holds historic contact information</description>
    <label>Contact Information (External)</label>
    <type>TextArea</type>
</CustomField>