force-app/main/default/objects/Case/fields/Contact_Information_Internal__c.field-meta.xml
<CustomField>
    <fullName>Contact_Information_Internal__c</fullName>
    <label>Contact Information (Internal)</label>
    <type>TextArea</type>
</CustomField>