force-app/main/default/objects/Case/fields/Contact_Received__c.field-meta.xml
<CustomField>
    <fullName>Contact_Received__c</fullName>
    <description>Date contacted</description>
    <label>Contact Received</label>
    <type>Date</type>
</CustomField>