force-app/main/default/objects/Case/fields/Contact_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Contact_Supervisor__c</fullName>
    <formula>Contact.User__r.Supervisor_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Supervisor</label>
    <type>Text</type>
</CustomField>