force-app/main/default/objects/Case/fields/Corrective_Action_Plan_CAP__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action_Plan_CAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corrective Action Plan (CAP)</label>
    <type>Checkbox</type>
</CustomField>