force-app/main/default/objects/Case/fields/Course_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_End_Date__c</fullName>
    <formula>IF( 
AND( 
ISBLANK(Course_One_Ending_Date__c), 
ISBLANK(Course_Two_Ending_Date__c), 
ISBLANK(Course_Three_Ending_Date__c )
), 
NULL, 
DATE(2998,1,1) - MAX( 
DATE(2998,1,1) - BLANKVALUE(Course_One_Ending_Date__c, DATE(2998,1,1)), 
DATE(2998,1,1) - BLANKVALUE(Course_Two_Ending_Date__c, DATE(2998,1,1)), 
DATE(2998,1,1) - BLANKVALUE(Course_Three_Ending_Date__c ,DATE(2998,1,1)) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course End Date</label>
    <type>Date</type>
</CustomField>