force-app/main/default/objects/Case/fields/Course_Official_Grade_Received__c.field-meta.xml
<CustomField>
    <fullName>Course_Official_Grade_Received__c</fullName>
    <label>Course Official Grade Received</label>
    <picklist>
        <picklistValues>
            <fullName>A,</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>A+,</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>A-,</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>B,</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>B+,</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>B-,</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>C,</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>C+,</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>D</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>