force-app/main/default/objects/Case/fields/Course_One_Books_Description__c.field-meta.xml
<CustomField>
    <fullName>Course_One_Books_Description__c</fullName>
    <label>Course One Books Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>