force-app/main/default/objects/Case/fields/Course_One_Cost_of_Books__c.field-meta.xml
<CustomField>
    <fullName>Course_One_Cost_of_Books__c</fullName>
    <label>Course One Cost of Books</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>