force-app/main/default/objects/Case/fields/Course_One_Ending_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_One_Ending_Date__c</fullName>
    <label>Course One Ending Date</label>
    <type>Date</type>
</CustomField>